bootstrapping/05_argocd/pre/02_ingress_grpc.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-grpc-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls: 
    - hosts:
      - argo-grpc-curso.proyectosrandom.es
      secretName: argo-grpc-curso-proyectosrandom-es-tls
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
    host: argo-grpc-curso.proyectosrandom.es
